Working on converting Groops over to show/sort design